grammar
<program>           ::= <statement>*

<statement>         ::= <function_definition>

<function_definition> ::= <identifier> "(" <variable> ")" "=" <expression>

<expression>        ::= <term> <rest_expression>

<rest_expression>   ::= "+" <term> <rest_expression>
                      | "-" <term> <rest_expression>
                      | ε

<term>              ::= <factor> <rest_term>

<rest_term>         ::= "*" <factor> <rest_term>
                      | "/" <factor> <rest_term>
                      | ε

<factor>            ::= <primary> <rest_factor>

<rest_factor>       ::= "^" <primary> <rest_factor>
                      | ε

<primary>           ::= "TRIG_FUNCTION(" <expression> ")"
                      | "EXP(" <expression> ")"
                      | <number>
                      | <variable>
                      | "(" <expression> ")"

<number>            ::= [0-9]+

<variable>          ::= x | y | z

<identifier>        ::= [a-zA-Z][a-zA-Z]*
